--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
-        <link rel="styleheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Website</title>
     </head>
     <body>
