--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Красивая форма</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<title>Красивая форма №2</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="">
-        <h1 title="Форма регистрации на сайте">Регистрация</h1>
-        <div class="group">
-            <label for="">Имя пользователя:</label>
-            <input type="text">
-        </div>
-        <div class="group">
-            <label for="">Пароль:</label>
-            <input type="password">
-        </div>
-        <div class="group">
-            <label for="">Пароль ещё раз:</label>
-            <input type="password">
-        </div>
-        <div class="group">
-            <label for="">Адрес электронной почты:</label>
-            <input type="email">
-        </div>
-        <div class="group">
-            <center><button>Регистрация</button></center>
-        </div>
-    </form>
+	<form action="">
+		<h1 title="Форма регистрации на сайте">Регистрация</h1>
+		<div class="group">
+			<label for="">Имя пользователя:</label>
+			<input type="text">
+		</div>
+		<div class="group">
+			<label for="">Пароль:</label>
+			<input type="password">
+		</div>
+		<div class="group">
+			<label for="">Пароль еще раз:</label>
+			<input type="password">
+		</div>
+		<div class="group">
+			<label for="">Адрес электронной почты:</label>
+			<input type="email">
+		</div>
+		<div class="group">
+			<center><button>Регистрация</button></center>
+		</div>
+	</form>
 </body>
 </html>
