--- a/1str.html
+++ b/1str.html
@@ -7,6 +7,7 @@
     <title>1str</title>
 </head>
 <body>
-    
+    <a href="./2str.html">Переход</a>
+    <a href="./LoadingScreen.html">LoadingScreen</a>
 </body>
 </html>
