--- a/LoadingScreen.html
+++ b/LoadingScreen.html
@@ -6,12 +6,42 @@
 	<title>Loading</title>
 </head>
 <body>
-	<nav>
-		<ul class="knopki">
-			<li>Home</li>
-			<li><a href="1.html"></a></li>
-		</ul>
-	</nav>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
 	<span></span>
 	<span></span>
 	<span></span>
