--- a/1str.html
+++ b/1str.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1str</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="./2str.html">Переход</a>
+
+<div class="cards">
+    <div class="card">
+        <center>
+        <img src="./images/telegram.png" alt="Avatar" style="width:30%">
+        <div class="container">
+          <h4><b>Программист</b></h4>
+        </div>
+        </center>
+    </div>
+
+    <div class="card">
+        <center>
+        <img src="./images/iconVK.jpg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Сайт</b></h4>
+        </div>
+        </center>
+    </div>
+
+</div>
 </body>
 </html>
