--- a/1str.html
+++ b/1str.html
@@ -4,30 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1str</title>
+    <title>Cards</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="cards">
     <div class="card">
-        <center>
-        <img src="./images/telegram.png" alt="Avatar" style="width:30%">
+        <img src="./images/Artem.jpg" alt="Avatar" style="width:100%">
         <div class="container">
           <h4><b>Программист</b></h4>
+          <p>Артём, 111 годиков, работа над кодом игры и помощь команде.</p>
         </div>
-        </center>
     </div>
 
     <div class="card">
-        <center>
-        <img src="./images/iconVK.jpg" alt="Avatar" style="width:30%">
+        <img src="./images/Milana.jpg" alt="Avatar" style="width:100%">
         <div class="container">
             <h4><b>Сайт</b></h4>
+            <p>Человек</p>
         </div>
-        </center>
+    </div>
+    
+    <div class="card">
+        <img src="./images/FZ.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4><b>3D дизайнер</b></h4>
+            <p>Человек</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="./images/FZ2.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4><b>3D дизайнер</b></h4>
+            <p>Человек</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="./images/FZ3.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4><b>3D дизайнер</b></h4>
+            <p>Человек</p>
+        </div>
     </div>
 
 </div>
+
 </body>
 </html>
