--- a/1str.html
+++ b/1str.html
@@ -22,7 +22,7 @@
         <img src="./images/Milana.jpg" alt="Avatar" style="width:100%">
         <div class="container">
             <h4><b>Сайт</b></h4>
-            <p>Человек</p>
+            <p>Милана, 15 годиков...</p>
         </div>
     </div>
     
@@ -30,7 +30,7 @@
         <img src="./images/FZ.jpg" alt="Avatar" style="width:100%">
         <div class="container">
             <h4><b>3D дизайнер</b></h4>
-            <p>Человек</p>
+            <p>Человек...</p>
         </div>
     </div>
 
@@ -38,15 +38,15 @@
         <img src="./images/FZ2.jpg" alt="Avatar" style="width:100%">
         <div class="container">
             <h4><b>3D дизайнер</b></h4>
-            <p>Человек</p>
+            <p>Человек...</p>
         </div>
     </div>
 
     <div class="card">
         <img src="./images/FZ3.jpg" alt="Avatar" style="width:100%">
         <div class="container">
-            <h4><b>3D дизайнер</b></h4>
-            <p>Человек</p>
+            <h4><b>UI дизайнер</b></h4>
+            <p>Человек...</p>
         </div>
     </div>
 
