--- a/2str.html
+++ b/2str.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="./1str.html">Переход</a>
+    <!-- <a href="./1str.html">Переход</a> -->
+    <div class="transitions">
+        
+    </div>
+    <div class="icon">
+        <img src="./images/telegram.png" alt="icon">
+    </div>
 </body>
 </html>
