--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <a href="./1str.html">Переход</a> -->
+    <a href="./1str.html">Переход</a>
     <div class="transitions">
         
     </div>
