созданы новые карты-уч и на сортировку и доработку

--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Face</title>
+    <title>Начальная страница</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <a href="./1str.html">Переход</a>
-    <div class="transitions">
-        
-    </div>
+    <!-- Новигацонное меню -->
+    <ul class="menu-main">
+        <li><a href="index.html" class="current">Меню</a></li>
+        <li><a href="">Прочее</a></li>
+        <li><a href="">Прочее</a></li>
+        <li><a href="">Прочее</a></li>
+    </ul>
+    <!-- Конец новигационного меню -->
+
     <div class="icon">
         <img src="./images/telegram.png" alt="icon">
     </div>
 </body>
+
 </html>
