--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Новигацонное меню -->
     <ul class="menu-main">
         <li><a href="index.html" class="current">Меню</a></li>
-        <li><a href="">Прочее</a></li>
+        <li><a href="Cards2.html">Карточки участников</a></li>
         <li><a href="">Прочее</a></li>
         <li><a href="">Прочее</a></li>
     </ul>
