--- a/Cards2.html
+++ b/Cards2.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cards</title>
+  <title>Карточки участников</title>
   <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
+  <!-- Новигацонное меню -->
+  <ul class="menu-main">
+    <li><a href="index.html">Меню</a></li>
+    <li><a href="Cards2.html" class="current">Карточки участников</a></li>
+    <li><a href="InputCard.html">Ввод карты</a></li>
+    <li><a href="">Прочее</a></li>
+  </ul>
+  <!-- Конец новигационного меню -->
+
   <div class="container">
     <div class="card">
       <div class="face face1">
