--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul class="menu-main">
         <li><a href="index.html" class="current">Меню</a></li>
         <li><a href="Cards2.html">Карточки участников</a></li>
-        <li><a href="">Прочее</a></li>
+        <li><a href="InputCard.html">Ввод карты</a></li>
         <li><a href="">Прочее</a></li>
     </ul>
     <!-- Конец новигационного меню -->
