--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <!-- Конец новигационного меню -->
 
     <div class="icon">
-        <img src="./images/telegram.png" alt="icon">
+        <img src="./images/iconNew.png" alt="icon">
+    </div>
+
+    <div class="privtext">
+        <h1>Приветствую вас на нашем проекте под названием ProBot!</h1>
+        <p>На нашем сайте вы можете узнать кто работал над нашим проектом, как шла разработка, написать об ошибке и многое другое</p>
     </div>
 </body>
 
