--- a/InputCard.html
+++ b/InputCard.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ввод карты</title>
   <link rel="stylesheet" href="CardStyle.css">
+  <link rel="stylesheet" href="NavMenu.css">
   <script src="CardScript.js"></script>
 </head>
 
