--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Начальная страница</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="NavMenu.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <li><a href="index.html" class="current">Меню</a></li>
         <li><a href="Cards2.html">Карточки участников</a></li>
         <li><a href="InputCard.html">Ввод карты</a></li>
-        <li><a href="">Прочее</a></li>
+        <li><a href="About.html">Информация</a></li>
     </ul>
     <!-- Конец новигационного меню -->
 
@@ -25,7 +26,8 @@
 
     <div class="privtext">
         <h1>Приветствую вас на нашем проекте под названием ProBot!</h1>
-        <p>На нашем сайте вы можете узнать кто работал над нашим проектом, как шла разработка, написать об ошибке и многое другое</p>
+        <p>На нашем сайте вы можете узнать кто работал над нашим проектом, как шла разработка, написать об ошибке и
+            многое другое</p>
     </div>
 </body>
 
