--- a/Cards2.html
+++ b/Cards2.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Карточки участников</title>
+  <title>Карточки участников228</title>
   <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="NavMenu.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <li><a href="index.html">Меню</a></li>
     <li><a href="Cards2.html" class="current">Карточки участников</a></li>
     <li><a href="InputCard.html">Ввод карты</a></li>
-    <li><a href="">Прочее</a></li>
+    <li><a href="About.html">Информация</a></li>
   </ul>
   <!-- Конец новигационного меню -->
 
