--- a/InputCard.html
+++ b/InputCard.html
@@ -17,7 +17,7 @@
     <li><a href="index.html">Меню</a></li>
     <li><a href="Cards2.html">Карточки участников</a></li>
     <li><a href="InputCard.html" class="current">Ввод карты</a></li>
-    <li><a href="">Прочее</a></li>
+    <li><a href="About.html">Информация</a></li>
   </ul>
   <!-- Конец новигационного меню -->
 
