--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Начальная страница</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="NavMenu.css">
+    <link rel="stylesheet" href="Button.css">
 </head>
 
 <body>
@@ -21,13 +22,24 @@
     <!-- Конец новигационного меню -->
 
     <div class="icon">
-        <img src="./images/iconNew.png" alt="icon">
+        <img src="./images/LogoBogo.png" alt="icon">
     </div>
 
     <div class="privtext">
-        <h1>Приветствую вас на нашем проекте под названием ProBot!</h1>
-        <p>На нашем сайте вы можете узнать кто работал над нашим проектом, как шла разработка, написать об ошибке и
-            многое другое</p>
+        <h1>Приветствуем вас на официальном сайте игры</h1>
+        <h2>ProBot</h2>
+        <p>Наша игра создавалась в целях развития навыков программирования и нестандартного мышления.</p>
+        <p>Здесь вы можете узнать кто работал над нашим проектом,</p>
+        <p>будущие обновления нашей игры, найдя ошибку вы можете сообщить о ней и многое другое</p>
+        <!-- <p>Нажимай кнопку предзаказа что быть первым кто опробует наш продукт.</p> -->
+    </div>
+
+    <div class="button">
+        <a href="https://www.youtube.com/watch?v=1GrOo3SccEY" class="button">Предзаказ</a>
+
+        <form action="https://www.youtube.com/watch?v=1GrOo3SccEY">
+            <button>Предзаказ</button>
+        </form>
     </div>
 </body>
 
