--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
     </div>
 
     <div class="button">
-        <a href="https://www.youtube.com/watch?v=1GrOo3SccEY" class="button">Предзаказ</a>
-
-        <form action="https://www.youtube.com/watch?v=1GrOo3SccEY">
-            <button>Предзаказ</button>
-        </form>
+        <button onclick="window.location.href = 'https\:\/\/www.youtube.com\/watch?v=1GrOo3SccEY'">Предзаказ</button>
     </div>
 </body>
 
