New background and new code

--- a/Cards2.html
+++ b/Cards2.html
@@ -30,8 +30,7 @@
       </div>
       <div class="face face2">
         <div class="content">
-          <p>Это Чел.
-          </p>
+          <p>Это Чел.</p>
           <a href="#">Доп.</a>
         </div>
       </div>
@@ -45,8 +44,7 @@
       </div>
       <div class="face face2">
         <div class="content">
-          <p>Это тоже вроде чел.
-          </p>
+          <p>Это тоже вроде чел.</p>
           <a href="#">Доп.</a>
         </div>
       </div>
@@ -60,8 +58,21 @@
       </div>
       <div class="face face2">
         <div class="content">
-          <p>Даже не знаю что про него рассказать.
-          </p>
+          <p>Даже не знаю что про него рассказать.</p>
+          <a href="#">Доп.</a>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <img src="./images/FZ3.jpg">
+          <h3>Верни сотку</h3>
+        </div>
+      </div>
+      <div class="face face2">
+        <div class="content">
+          <p>Чел взял сотку и не вернул</p>
           <a href="#">Доп.</a>
         </div>
       </div>
