--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <ul class="menu-main">
         <li><a href="index.html" class="current">Меню</a></li>
         <li><a href="Cards2.html">Карточки участников</a></li>
-        <li><a href="InputCard.html">Ввод карты</a></li>
+        <li><a href="preorder.html">Предзаказ</a></li>
         <li><a href="About.html">Информация</a></li>
     </ul>
     <!-- Конец новигационного меню -->
