--- a/About.html
+++ b/About.html
@@ -14,8 +14,8 @@
     <!-- Новигацонное меню -->
     <ul class="menu-main">
         <li><a href="index.html">Меню</a></li>
-        <li><a href="Cards2.html">Карточки участников</a></li>
-        <li><a href="InputCard.html">Ввод карты</a></li>
+        <li><a href="Cards.html">Карточки участников</a></li>
+        <li><a href="preorder.html">Предзаказ</a></li>
         <li><a href="About.html" class="current">Информация</a></li>
     </ul>
     <!-- Конец новигационного меню -->
@@ -23,6 +23,10 @@
     <div class="text">
         <h1>Над этой страницей идёт работа!</h1>
         <p>Подождите немного :)</p>
+    </div>
+
+    <div class="end">
+        <h1>Здесь конец</h1>
     </div>
 </body>
 
