--- a/Cards.html
+++ b/Cards.html
@@ -2,58 +2,82 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Карточки нашей команды</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Карточки участников228</title>
+  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="NavMenu.css">
 </head>
 
 <body>
+  <!-- Новигацонное меню -->
+  <ul class="menu-main">
+    <li><a href="index.html">Меню</a></li>
+    <li><a href="Cards.html" class="current">Карточки участников</a></li>
+    <li><a href="preorder.html">Предзаказ</a></li>
+    <li><a href="About.html">Информация</a></li>
+  </ul>
+  <!-- Конец новигационного меню -->
 
-    <div class="cards">
-        <div class="card">
-            <img src="./images/Artem.jpg" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>Программист</b></h4>
-                <p>---</p>
-            </div>
+  <div class="container">
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <img src="./images/Artem.jpg">
+          <h3>Тёма</h3>
         </div>
-
-        <div class="card">
-            <img src="./images/Milana.jpg" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>Сайт</b></h4>
-                <p>---</p>
-            </div>
+      </div>
+      <div class="face face2">
+        <div class="content">
+          <p>Это Чел.</p>
+          <a href="#">Доп.</a>
         </div>
-
-        <div class="card">
-            <img src="./images/FZ.jpg" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>3D дизайнер</b></h4>
-                <p>---</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="./images/FZ2.jpg" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>3D дизайнер</b></h4>
-                <p>---</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="./images/FZ3.jpg" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>UI дизайнер</b></h4>
-                <p>---</p>
-            </div>
-        </div>
-
+      </div>
     </div>
-
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <img src="./images/FZ.jpg">
+          <h3>НН-какой-то</h3>
+        </div>
+      </div>
+      <div class="face face2">
+        <div class="content">
+          <p>Это тоже вроде чел.</p>
+          <a href="#">Доп.</a>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <img src="./images/FZ2.jpg">
+          <h3>Ну точно не человек</h3>
+        </div>
+      </div>
+      <div class="face face2">
+        <div class="content">
+          <p>Даже не знаю что про него рассказать.</p>
+          <a href="#">Доп.</a>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <img src="./images/FZ3.jpg">
+          <h3>Верни сотку</h3>
+        </div>
+      </div>
+      <div class="face face2">
+        <div class="content">
+          <p>Чел взял сотку и не вернул</p>
+          <a href="#">Доп.</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
