--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Новигацонное меню -->
     <ul class="menu-main">
         <li><a href="index.html" class="current">Меню</a></li>
-        <li><a href="Cards2.html">Карточки участников</a></li>
+        <li><a href="Cards.html">Карточки участников</a></li>
         <li><a href="preorder.html">Предзаказ</a></li>
         <li><a href="About.html">Информация</a></li>
     </ul>
