--- a/preorder.html
+++ b/preorder.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Предзаказ</title>
-    <link rel="stylesheet" href="preorder.css">
+    <link rel="stylesheet" href="preorderStyle.css">
     <link rel="stylesheet" href="NavMenu.css">
 </head>
 
@@ -14,7 +14,7 @@
     <!-- Новигацонное меню -->
     <ul class="menu-main">
         <li><a href="index.html">Меню</a></li>
-        <li><a href="Cards2.html">Карточки участников</a></li>
+        <li><a href="Cards.html">Карточки участников</a></li>
         <li><a href="preorder.html" class="current">Предзаказ</a></li>
         <li><a href="About.html">Информация</a></li>
     </ul>
