--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <p>Наша игра создавалась в целях развития навыков программирования и нестандартного мышления.</p>
         <p>Здесь вы можете узнать кто работал над нашим проектом,</p>
         <p>будущие обновления нашей игры, найдя ошибку вы можете сообщить о ней и многое другое</p>
-        <!-- <p>Нажимай кнопку предзаказа что быть первым кто опробует наш продукт.</p> -->
+        <p>Нажимай кнопку предзаказа что быть первым кто опробует наш продукт.</p>
     </div>
 
     <div class="button">
-        <button onclick="window.location.href = 'https\:\/\/www.youtube.com\/watch?v=1GrOo3SccEY'">Предзаказ</button>
+        <button onclick="window.location.href = 'preorder.html'">Предзаказ</button>
     </div>
 </body>
 
