--- a/preorder.html
+++ b/preorder.html
@@ -8,6 +8,7 @@
     <title>Предзаказ</title>
     <link rel="stylesheet" href="preorderStyle.css">
     <link rel="stylesheet" href="NavMenu.css">
+    <link rel="stylesheet" href="Button.css">
 </head>
 
 <body>
@@ -19,6 +20,16 @@
         <li><a href="About.html">Информация</a></li>
     </ul>
     <!-- Конец новигационного меню -->
+
+    <div class="preordertext">
+        <h1>Нажимай кнопку предзаказа и будь первым кто опробует наш продукт)</h1>
+    </div>
+
+
+    <div class="button">
+        <!-- <button onclick="window.location.href = 'https\:\/\/www.youtube.com\/watch?v=1GrOo3SccEY'">Предзаказ</button> -->
+        <button onclick="window.location.href = 'https\:\/\/drive.google.com\/drive\/folders\/1HmBRMzkxRGl92l48MimBJJzf0XtSaAUC?usp=sharing'">Предзаказ</button>
+    </div>
 
     <div class="end">
         <h1>Здесь конец</h1>
