небольшое обновление текста

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="button">
-        <button onclick="window.location.href = 'preorder.html'">Предзаказ</button>
+        <button onclick="window.location.href = 'preorder.html'">Страница Предзаказа</button>
     </div>
 </body>
 
