--- a/Proverki/Proverki.html
+++ b/Proverki/Proverki.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <button>Button</button>
-    <button style="--color:#f3738a;--border:2px;--slant:.5em">Button</button>
-    <button style="--color:#69db3a;--slant:40px;--border:8px">Button</button>
+    <button class="button" style="vertical-align:middle"><span>Кнопка </span></button>
 </body>
 
 </html>
