--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <div class="button">
         <button onclick="window.location.href = 'preorder.html'">Страница Предзаказа</button>
+        <!-- <button class="button" style="vertical-align:middle"><span>Страница скачивания игры </span></button> -->
     </div>
 </body>
 
